[F][Login/Register]Fix a bug with scrollbars

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+.modal-open {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
 body{
   background-color: #f7f7f7;  
 }
